# retailops-cli-suite

./: .gitignore  .pr_body.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt
c_tools/: csv_validate.c  customer_score.c  inventory_check.c  revenue_trend.c
docs/: data_dictionary.md  developer_guide.md  final_project_summary.md  line_count_report.md  release_checklist.md  user_guide.md
examples/: customers.csv  inventory.csv  monthly_revenue.csv  orders.csv  returns.csv  sales.csv  stores.csv
r_scripts/: customer_segments.R  inventory_summary.R  revenue_forecast.R  sales_summary.R
release/: RELEASE_NOTES.md  RELEASE_NOTES_v1.0.1.md
reports/: sample_report.md
retailops/: __init__.py  cli.py  customers.py  data_loader.py  errors.py  formatting.py  inventory.py  report_builder.py  returns.py  revenue.py  sales.py  stores.py  validators.py
scripts/: build_c_tools.ps1  build_exe.ps1  count_lines.ps1  package_release.ps1  run_all_tests.ps1
tests/: test_c_tools.ps1  test_python_cli.py  test_python_customers.py  test_python_inventory.py  test_python_sales.py  test_r_scripts.R
